# solsign

./: Cargo.toml  README.md
prebuilt/linux/: solsign
prebuilt/osx/: solsign
src/: main.rs
